# Rust-practice

./: Cargo.toml
design-pattern/abstract-factory/src/: app.rs  gui.rs  lib.rs  macos.rs  main.rs  windows.rs
design-pattern/builder/src/: builders.rs  director.rs
design-pattern/builder/src/builders/: product_a.rs
exp-crate/exp-scraper/: Cargo.toml
exp-crate/exp-scraper/src/: main.rs
my-browser/: Cargo.toml
my-browser/src/: dom.rs  html.rs
my-grep/: Cargo.toml  Readme.md
my-grep/src/: main.rs
my-redis/: Cargo.toml
my-texteditor/: Cargo.toml
my-texteditor/src/: document.rs  editor.rs  main.rs  row.rs  terminal.rs
my-todo/: Cargo.toml  Readme.md  test-journal.json
my-todo/src/: cli.rs  main.rs  tasks.rs
my-webserver/: 404.html  Cargo.toml  hello.html
my-webserver/src/: main.rs
myShell/: Cargo.toml
my_shell/: Cargo.toml  README.md
rust-examples/: README.md
rust-examples/examples/: hello.rs
rust-examples/src/: calc.rs  lib.rs  main.rs
rust-examples/src/animals/: dog.rs
rust-test/: Readme.md
rust-test/src/: ex1.rs  ex2.rs  lib.rs  main.rs
rust-test/tests/: pizza.rs
