[package]
name = "my-todo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "*"
home = "*"
serde_json = "*"
structopt = "*"


[dependencies.chrono]
features = ["serde"]
version = "*"

[dependencies.serde]
features = ["derive"]
version = "*"